infra/k8s/storify-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storify-depl
spec:
  selector:
    matchLabels:
      app: storify
  template:
    metadata:
      labels:
        app: storify
    spec:
      containers:
        - name: storify
          image: nericoder/storify
---
apiVersion: v1
kind: Service
metadata:
  name: storify-srv
spec:
  selector:
    app: storify
  ports:
    - port: 3001
      targetPort: 3000
