infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: autest.dev
      http:
        paths:
          - path: /api/ai.*
            pathType: Prefix
            backend:
              service:
                name: ai-srv
                port:
                  number: 3000
    - host: autest.dev
      http:
        paths:
          - path: /api/storify.*
            pathType: Prefix
            backend:
              service:
                name: storify-srv
                port:
                  number: 3001
